Working routing and authentication to use - launch 'client/app.js' file with 'node app.js' then launch react using 'npm start'

--- a/src/App.css
+++ b/src/App.css
@@ -15,12 +15,13 @@
   top: "0";
 }
 .navbar {
-  position: fixed;
+  position: absolute;
   height: 70px;
   width: 100%;
   top: 0;
   background-color: black;
   color: white;
+  z-index: 2000;
 }
 
 .App-header {
